<resources>
    <string name="app_name">Darchin</string>
    <string name="hint_search">نام محله، فروشگاه یا محصول</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="nav_item_login_register">ورود | ثبت نام</string>
    <string name="nav_item_orders">سفارشات</string>
    <string name="nav_item_favorite">علاقه مندی ها</string>
    <string name="nav_item_profile">حساب کاربری</string>
    <string name="nav_item_charge_account">شارژ حساب</string>
    <string name="nav_item_share">اعتبار رایگان</string>
    <string name="nav_item_store_suggestion">معرفی فروشگاه</string>
    <string name="nav_item_support">پشتیبانی</string>
    <string name="press_back_btn_again">برای خروج دکمه بازگشت را مجددا فشار دهید!</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_login_register</item>
        <item>@string/nav_item_orders</item>
        <item>@string/nav_item_favorite</item>
        <item>@string/nav_item_profile</item>
        <item>@string/nav_item_charge_account</item>
        <item>@string/nav_item_share</item>
        <item>@string/nav_item_store_suggestion</item>
        <item>@string/nav_item_support</item>
    </string-array>
    <string name="btn_show_all">نمایش همه</string>
    <string name="search">جستجو</string>
    <string name="stores">فروشگاه ها (%1$d)</string>
    <string name="products">محصولات (%1$d)</string>
    <string name="delivery_fast">سرعت پیک</string>
    <string name="filter_your_choice">لیست را فیلتر کنید</string>
    <string name="btn_delete">حذف</string>
    <string name="btn_execute">اعمال</string>
    <string name="watch_shopping">مشاهده سبد خرید</string>
    <string name="store_menu">منو</string>
    <string name="store_info">اطلاعات</string>
    <string name="store_comments">نظرات</string>
    <string name="today_work_time">ساعت کاری امروز</string>
    <string name="delivery_cost">هزینه ارسال</string>
    <string name="minimum_order">حداقل سفارش</string>
    <string name="service_range">محدوده سرویس دهی</string>
    <string name="location_on_map">موقعیت</string>
    <string name="hours_of_work">ساعت کاری</string>
    <string name="saturday">شنبه</string>
    <string name="sunday">یک شنبه</string>
    <string name="monday">دو شنبه</string>
    <string name="tuesday">سه شنبه</string>
    <string name="wednesday">چهار شنبه</string>
    <string name="thursday">پنج شنبه</string>
    <string name="friday">جمعه</string>
    <string name="pictures_of_store">عکس از محیط</string>
    <string name="popular_products">غذا های محبوب</string>
    <string name="pictures_sent_by_users">عکس های ارسالی توسط کاربران :</string>
    <string name="store_manager_reply">پاسخ مدیر فروشگاه</string>
    <string name="courier">نحوه برخورد پیک</string>
    <string name="quality_package">کیفیت بسته بندی</string>
    <string name="quality_product">کیفیت محصول</string>
    <string name="money_unit">تومان</string>
    <string name="setting">تنظیمات</string>
    <string name="user_profile">مشخصات کاربری</string>
    <string name="addresses">آدرس ها</string>
    <string name="change_password">تغییر رمز عبور</string>
    <string name="exit">خروج</string>
    <string name="tracking">پیگیری</string>
    <string name="send_comment">ارسال نظر</string>
    <string name="sum_total">جمع کل</string>
    <string name="you_have_not_ordered_yet">تا حالا سفارش نداده اید</string>
    <string name="you_have_not_marked_a_restaurant_as_favorite_yet">تا حالا فروشگاهی را به لیست علاقه مندی های خود اضافه نکرده اید</string>
    <string name="selection_language">انتخاب زبان</string>
    <string name="submit_your_comment">اگر انتقاد یا پیشنهادی دارید، در اینجا بنویسید…</string>
    <string name="your_opinion_about_this_order">به کیفیت خدمات %1$s چه امتیازی می دهید؟</string>
    <string name="send">ارسال</string>
    <string name="poll">نظر سنجی</string>
    <string name="notification">اطلاعیه</string>
    <string name="please_connect_to_network">لطفا به اینترنت متصل شوید</string>
    <string name="name">نام و نام خانوادگی</string>
    <string name="phone_number">شماره موبایل</string>
    <string name="save">ذخیره</string>
    <string name="you_have_not_entered_any_address_yet">هیچ آدرسی ذخیره نشده است</string>
    <string name="edit_address">ویرایش آدرس</string>
    <string name="area">محدوده</string>
    <string name="continue_the_address">ادامه آدرس (مثل خیابان، کوچه، پلاک)</string>
    <string name="title_of_address">عنوان آدرس ( مثل خانه، دانشگاه، شرکت و … )</string>
    <string name="enter_your_area">محدوده خود را وارد کنید</string>
    <string name="continuation">ادامه</string>
    <string name="area_selection">انتخاب محدوده</string>
    <string name="this_area_is_still_not_under_our_coverage">این محدوده هنوز تحت پوشش ما نیست</string>
    <string name="which_city_do_you_live">انتخاب شهر</string>
    <string name="save_address">ثبت آدرس</string>
    <string name="new_address">آدرس جدید</string>
    <string name="account_balance">موجودی حساب</string>
    <string name="credit_info">با افزایش اعتبار خود در دارچین ، سریع تر و بدون مراجعه به درگاه پرداخت و وارد کردن اطلاعات کارت بانکی ، محصول خود را سفارش دهید.</string>
    <string name="increase_credit_to_desired_amount">افزایش اعتبار به مبلغ دلخواه</string>
    <string name="charge_account_by_gift_code">شارژ حساب توسط کد هدیه</string>
    <string name="enter_your_desired_amount">مبلغ مورد نظر خود را به تومان وارد کنید</string>
    <string name="confirm">تایید</string>
    <string name="the_amount_of_credit_increase">میزان افزایش اعتبار</string>
    <string name="enter_your_gift_code">کد هدیه خود را وارد کنید</string>
    <string name="confirm_code">تایید کد</string>
    <string name="gift_code">کد هدیه</string>
    <string name="please_select_your_language">لطفا زبان خود را انتخاب کنید</string>
    <string name="enter_your_current_password">رمز عبور فعلی خود را وارد کنید</string>
    <string name="current_password">رمز عبور فعلی</string>
    <string name="new_password">رمز عبور جدید</string>
    <string name="repeat_new_password">تکرار رمز عبور جدید</string>
    <string name="upload_photo_info">عکس محصول خود را آپلود کرده و نظر دهید</string>
    <string name="choose_photo_from_gallery">انتخاب عکس غذا از گالری</string>
    <string name="take_photo_of_food_by_camera">گرفتن عکس غذا با دوربین</string>
    <string name="upload_photo">آپلود عکس</string>
    <string name="please_select_an_item">لطفا یکی از موارد را انتخاب کنید</string>
    <string name="specific_amount_of_discounts_for_each_invitations">دعوت کنید، هدیه بگیرید</string>
    <string name="free_credit_info">شما می توانید با به اشتراک گذاشتن لینک زیر، به دوستانی که تا کنون از دارچین خرید نکرده اند، کد تخفیف هدیه بدهید! به ازای هر یک از دوستانتان که اولین سفارش خود را با کد تخفیف شما ثبت کنند ، شما هم از دارچین کد تخفیف دریافت می کنید.</string>
    <string name="your_special_invitation_link">لینک دعوت مخصوص شما</string>
    <string name="send_invitation">ارسال دعوت نامه</string>
    <string name="invitation_link_info">سلام من از نرم افزار دارچین، آنلاین سفارش میدم. به تو هم پیشنهاد میکنم استفاده کنی. با استفاده از این لینک میتونی از طرف من برای اولین سفارشت کد تخفیف بگیری.</string>
    <string name="invitation_link_copied_to_clipboard_successfully">لینک دعوت نامه کپی شد</string>
    <string name="restaurant_name">نام فروشگاه</string>
    <string name="city_name">نام شهر</string>
    <string name="address">آدرس</string>
    <string name="restaurant_phone_number">شماره تلفن فروشگاه</string>
    <string name="your_name">نام شما</string>
    <string name="your_mobile_number">شماره موبایل شما</string>
    <string name="restaurant_address">آدرس فروشگاه</string>
    <string name="are_you_the_restaurant_manager">آیا شما مالک فروشگاه هستید؟</string>
    <string name="submit_information">ثبت اطلاعات</string>
    <string name="login_or_register">ورود یا ثبت نام</string>
    <string name="password">رمز عبور</string>
    <string name="login">ورود</string>
    <string name="login_to_account">ورود به حساب کاربری</string>
    <string name="forget_password">فراموشی رمز عبور</string>
    <string name="verification_info">لطفا کد ارسال شده به %1$s را وارد کنید</string>
    <string name="enter_the_code">کد را وارد کنید</string>
    <string name="register">ثبت نام</string>
    <string name="resend">ارسال مجدد</string>
    <string name="full_name">نام و نام خانوادگی</string>
    <string name="repeat_password">تکرار رمز عبور</string>
    <string name="cart_of_store">سبد خرید %1$s</string>
    <string name="post_time">زمان ارسال: %1$s</string>
    <string name="choose_address">انتخاب آدرس</string>
    <string name="view_more">مشاهده بیشتر</string>
    <string name="tax">مالیات</string>
    <string name="delivery">ارسال</string>
    <string name="packing">بسته بندی</string>
    <string name="discount">تخفیف</string>
    <string name="total">مجموع</string>
    <string name="submit_description">ثبت توضیحات</string>
    <string name="enter_the_description_about_your_order">توضیحات سفارش…</string>
    <string name="order_description">توضیحات سفارش</string>
    <string name="finalize_order">نهایی کردن سفارش</string>
    <string name="cost_of_delivery">هزینه ارسال :</string>
    <string name="delivery_with_courier">ارسال با پیک</string>
    <string name="in_person_delivery">سرو حضوری</string>
    <string name="how_to_deliver_order">نحوه دریافت سفارش</string>
    <string name="online_payment">پرداخت آنلاین</string>
    <string name="how_to_take_order">نحوه دریافت سفارش</string>
    <string name="have_a_discount_code_enter_here">کد تخفیف دارید؟ اینجا وارد کنید</string>
    <string name="name_of_product">نام محصول:</string>
    <string name="price_of_product">قیمت:</string>
    <string name="score_of_product">امتیاز:</string>
    <string name="description_of_product">توضیحات:</string>
    <string name="comments_about_this_product">نظر کاربران درباره این محصول</string>
    <string name="add_to_cart">افزودن به سبد خرید</string>
    <string name="city_selection">انتخاب شهر</string>
    <string name="select">انتخاب</string>
    <string name="from_to_pattern">%1$s تا %2$s</string>
    <string name="today">امروز</string>
    <string name="tomorrow">فردا</string>
    <string name="how_to_use_darchin">چگونه با دارچین، آنلاین سفارش دهیم؟</string>
    <string name="intro_step_1_title">مقایسه کن</string>
    <string name="intro_step_1_desc">رقابت فروشگاه ها و محصولات رو ببین و مقایسه کن</string>
    <string name="intro_step_2_title">انتخاب کن</string>
    <string name="intro_step_2_desc">محصول مورد علاقه خودت رو انتخاب کن</string>
    <string name="intro_step_3_title">پرداخت کن</string>
    <string name="intro_step_3_desc">سریع ، امن و آنلاین پرداخت کن</string>
    <string name="intro_step_4_title">تحویل بگیر</string>
    <string name="intro_step_4_desc">هر جا که هستی سفارشت رو تحویل بگیر</string>
    <string name="accounting">تراکنش ها</string>
    <string name="you_do_not_have_any_transaction_yet">تاکنون تراکنشی برای شما ثبت نشده است</string>
    <string name="person">نفر</string>
    <string name="welcome_guest_user">کاربر مهمان خوش آمدید</string>
    <string name="please_wait">لطفا کمی صبر کنید…</string>
    <string name="password_should_be_more_than_some_char">کلمه عبور باید بیشتر از 4 کاراکتر باشد</string>
    <string name="password_confirmation_wrong">کلمه عبور و تکرار آن یکسان نیستند</string>
    <string name="verification">تایید هویت</string>
    <string name="request_failed">لطفا مجددا تلاش کنید</string>
    <string name="do_you_want_to_logout">آیا قصد خارج شدن از حساب کاربری خود را دارید؟</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="telephone_number">شماره تلفن</string>
    <string name="please_select_a_city">لطفا یکی از شهر ها را انتخاب کنید</string>
    <string name="please_select_your_city">لطفا شهر خود را انتخاب کنید</string>
    <string name="please_select_an_area">لطفا یکی از مناطق را انتخاب کنید</string>
    <string name="choose_time">انتخاب زمان</string>
</resources>