<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.tinab.darchin.controller.fragment.user.credit.ChargeAccountFragment">

    <include
        android:id="@+id/container_toolbar"
        layout="@layout/toolbar_simple_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container_toolbar"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/container_end_gap"
        android:layout_marginStart="@dimen/container_start_gap">
        <co.tinab.darchin.view.toolbox.TextViewLight
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/large"
            android:textColor="@color/secondaryText"
            android:text="@string/enter_your_desired_amount"
            android:textAlignment="center"/>
        <co.tinab.darchin.view.toolbox.EditTextNormal
            android:id="@+id/txt_input_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/setting_btn_bk"
            android:textColor="@color/colorAccent"
            android:hint="@string/the_amount_of_credit_increase"
            android:textColorHint="@color/semi_white"
            android:textDirection="ltr"
            android:textAlignment="center"
            android:textSize="@dimen/very_large"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:inputType="numberDecimal"
            android:lines="1"/>
    </LinearLayout>

    <co.tinab.darchin.view.toolbox.ButtonNormal
        android:id="@+id/btn_confirm"
        android:layout_alignParentBottom="true"
        android:text="@string/confirm"
        style="@style/MyButton"/>

</RelativeLayout>
