<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.tinab.darchin.controller.fragment.user.credit.GiftCodeFragment">

    <include
        android:id="@+id/container_toolbar"
        layout="@layout/toolbar_simple_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container_toolbar"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/container_end_gap"
        android:layout_marginStart="@dimen/container_start_gap">
        <co.tinab.darchin.view.toolbox.TextViewLight
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/large"
            android:textColor="@color/secondaryText"
            android:text="@string/enter_your_gift_code"
            android:textAlignment="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/field_min_height"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginTop="16dp"
            android:background="@drawable/setting_btn_bk">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:layout_gravity="start|center_vertical"
                android:src="@drawable/ic_gift_credit_24dp"
                android:tint="@color/colorAccent"
                android:contentDescription="@drawable/ic_gift_credit_24dp" />
            <co.tinab.darchin.view.toolbox.EditTextNormal
                android:id="@+id/txt_input_gift_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="@dimen/very_large"
                android:textDirection="locale"
                android:textColor="@color/primaryText"
                android:textColorHint="@color/semi_white"
                android:gravity="start|center_vertical"
                android:background="@android:color/transparent"
                android:layout_gravity="end|center_vertical"
                android:layout_weight="0.9"
                android:hint="@string/gift_code"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:inputType="textPersonName"
                android:lines="1"/>
        </LinearLayout>

    </LinearLayout>

    <co.tinab.darchin.view.toolbox.ButtonNormal
        android:id="@+id/btn_confirm"
        android:layout_alignParentBottom="true"
        android:text="@string/confirm_code"
        style="@style/MyButton"/>

</RelativeLayout>